# flashrnn

./: .gitignore  .pre-commit-config.yaml  README.md  environment_pt240cu124.yaml  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
flashrnn/: .gitignore  README.md
flashrnn/autotune/: constrint.py  constrint_test.constrint  tune.rules  tune.settings
flashrnn/debug/: kernel_check_cuda_alternating.py  kernel_check_cuda_fused.py  kernel_check_torchcudnn.py  kernel_check_triton.py  numerical_errors.ipynb
flashrnn/debug/plot/: __init__.py  diff_lineplot.py
flashrnn/flashrnn/: cuda_init.py  flashrnn.py
flashrnn/flashrnn/alternating/: flashrnn.cc
flashrnn/flashrnn/fused/: flashrnn.cc
flashrnn/flashrnn/fused_custom/: flashrnn.cc
flashrnn/flashrnn/util/: hip_compat.h
flashrnn/flashrnn/vanilla/: __init__.py
flashrnn/notebooks/: lstm--fwbw--triton_torch_vanilla.ipynb  lstm_pytorch_training_test.ipynb  max_head_dim.ipynb  slstm--fwbw--triton_torch_vanilla.ipynb  test.ipynb  test_triton.ipynb  test_triton.py
flashrnn/speed_experiments/: kernel_speed_benchmark.py  plot_batch_size_result--withbaselines.ipynb  plot_batch_size_result-additional--withbaselines.ipynb  plot_batch_size_results.ipynb  plot_head_dim_results--withbaselines.ipynb  plot_head_dim_results.ipynb  plot_sequence_length_results--withbaselines.ipynb  plot_sequence_length_results.ipynb
flashrnn/tests/: test_elman.py  test_gru.py  test_lstm.py  test_lstm_manual.py  test_slstm.py  utils.py
