[metadata]
version = 2.0.0
name = xlstm
description = A novel LSTM variant with promising performance compared to Transformers.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/NX-AI/xlstm
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    torch
    einops
    triton

[options.package_data]
* = flashrnn/flashrnn/gpu_info/*.cc, flashrnn/flashrnn/gpu_info/*.cu, flashrnn/flashrnn/gpu_info/*.h, flashrnn/flashrnn/fused/*.cc, flashrnn/flashrnn/fused/*.cu, flashrnn/flashrnn/fused/*.h, flashrnn/flashrnn/alternating/*.cc, flashrnn/flashrnn/alternating/*.cu, flashrnn/flashrnn/alternating/*.h, flashrnn/flashrnn/util/*.cc, flashrnn/flashrnn/util/*.cu, flashrnn/flashrnn/util/*.h


[options.packages.find]
exclude =
    flashrnn/debug
    flashrnn/notebooks
    flashrnn/speed_experiments
    flashrnn/tests